# nai-ui

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker.yml
crates/nai_api/: Cargo.toml
crates/nai_api/src/: character_preset_store.rs  db.rs  last_generation.rs  lib.rs  preset_store.rs  prompt_preset_store.rs  prompt_snippet_expand.rs  prompt_snippet_store.rs  simple_json_store.rs
crates/nai_api/src/routes/: character_presets.rs  director.rs  error.rs  generate.rs  jobs.rs  last_generation.rs  meta.rs  mod.rs  outputs.rs  presets.rs  prompt_presets.rs  prompt_snippets.rs
crates/nai_core/: Cargo.toml
crates/nai_core/src/: config.rs  dto.rs  job.rs  lib.rs  nai.rs  outputs.rs  prompt.rs  services.rs  util.rs
crates/nai_nai/: Cargo.toml
crates/nai_nai/src/: client.rs  lib.rs
src/: main.rs
web/: .dockerignore  .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  style.css
web/src/api/: client.ts  endpoints.ts  types.ts
web/src/components/: BaseGenerateForm.vue  GenerateNav.vue  PresetsNav.vue  fileBase64.ts  urls.ts
web/src/components/generate/form/: AdvancedJsonCollapse.vue  CharacterCollapse.vue  CoreParamsGrid.vue  ModelPresetSamplerRow.vue  ModelSamplerRow.vue  PromptFields.vue  PromptPresetCard.vue  SamplingParamsGrid.vue  TogglesRow.vue  WeightedPromptInput.vue  promptHighlighter.ts
web/src/components/generate/presets/: CharacterPresetApplyRow.vue  CharacterPresetManager.vue  GeneratePresetApplyRow.vue  GeneratePresetManager.vue  PromptPresetApplyRow.vue  PromptPresetManager.vue  PromptSnippetManager.vue
web/src/components/layout/: PageShell.vue
web/src/composables/: useCharacterPosition.ts  useCharacterPresets.ts  useGeneratePresets.ts  usePromptPresets.ts
web/src/router/: index.ts
web/src/stores/: jobs.ts  meta.ts  presets.ts  theme.ts
web/src/views/: DirectorView.vue  HomeView.vue  JobsView.vue  MetadataView.vue  OutputsView.vue
web/src/views/generate/: GenerateCharacterView.vue  GenerateI2IView.vue  GenerateInpaintView.vue  GeneratePresetsView.vue  GenerateT2IView.vue
web/src/views/presets/: PresetsCharacterView.vue  PresetsGenerateView.vue  PresetsPromptView.vue  PresetsSnippetView.vue
