[workspace]
resolver = "2"
members = ["crates/nai_api", "crates/nai_core", "crates/nai_nai"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[package]
name = "nai-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
nai_api = { path = "crates/nai_api" }
nai_core = { path = "crates/nai_core" }
nai_nai = { path = "crates/nai_nai" }

anyhow.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
