[package]
name = "nai_api"
version = "0.1.0"
edition = "2024"

[dependencies]
nai_core = { path = "../nai_core" }
nai_nai = { path = "../nai_nai" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
tokio-util = "0.7"
regex = "1.12.2"
async-recursion = "1"
