[package]
name = "nai_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
dotenvy = "0.15"
rand = "0.9"
regex = "1"
tokio = { version = "1", features = ["fs", "sync"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
